--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,31 +1,30 @@
-spring:
-  profiles:
-    active: dev
 server:
+  port: 8080
+  # acceptCount：当tomcat起动的线程数达到最大时，接受排队的请求个数，默认值为100
+  # maxThreads：tomcat起动的最大线程数，即同时处理的任务个数，默认值为200
+  # maxThreads如果是纯粹的计算应该设小，如果纯粹是IO或者数据库应该设大
+  # max-connections：服务器在任何给定时间接受和处理的最大连接数，NIO，默认值为10000.对于APR / native，默认值为8192
   tomcat:
     uri-encoding: UTF-8
-#  port: 8080
+    accept-count: 1000
+    max-threads: 1000
+    max-connections: 2000
+
+spring:
+  application:
+    name: hui-boot
+  profiles:
+    active: dev
 
 mybatis-plus:
   # 如果是放在resource目录 classpath:/mapper/*Mapper.xml
   mapper-locations: classpath:/mapper/*Mapper.xml
   #实体扫描，多个package用逗号或者分号分隔
-  typeAliasesPackage: com.project.entity
+  type-aliases-package: com.project.entity
   global-config:
-    #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
-    id-type: 2
-    #字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
-    field-strategy: 2
-    #驼峰下划线转换
-    db-column-underline: true
-    #mp2.3+ 全局表前缀 mp_
-    #table-prefix: mp_
-    #数据库大写下划线转换
-    #capital-mode: true
-    # Sequence序列接口实现类配置
-    key-generator: com.baomidou.mybatisplus.incrementer.OracleKeyGenerator
-    #逻辑删除配置
     db-config:
+      field-strategy: not_empty
+      id-type: AUTO
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
     #自定义填充策略接口实现
