重构项目目录结构

--- a/hui-boot-api/src/main/resources/application-dev.yml
+++ b/hui-boot-api/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    include: dev-mysql,dev-redis
+    include: dev-mysql
 
 #  jackson:
 #    date-format: yyyy-MM-dd HH:mm:ss
@@ -8,6 +8,7 @@ spring:
 
 logging:
   level:
+    com.hui: debug
     io.swagger.models.parameters.AbstractSerializableParameter: error
 
 mybatis-plus:
