--- a/hui-boot-api/pom.xml
+++ b/hui-boot-api/pom.xml
@@ -7,15 +7,14 @@
 				<artifactId>hui-boot</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 		</parent>
-		<groupId>com.hui.project</groupId>
+
 		<artifactId>hui-boot-api</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<name>hui-boot-api</name>
 		<description>Simple project for Spring Boot</description>
 
 		<properties>
-				<swagger.version>2.8.0</swagger.version>
-				<mybatisplus-boot-starter.version>3.1.0</mybatisplus-boot-starter.version>
+				<hui-boot-common.version>0.0.1-SNAPSHOT</hui-boot-common.version>
 				<velocity-engine-core.version>2.0</velocity-engine-core.version>
 		</properties>
 
@@ -36,14 +35,9 @@
 						<optional>true</optional>
 				</dependency>
 				<dependency>
-						<groupId>io.springfox</groupId>
-						<artifactId>springfox-swagger2</artifactId>
-						<version>${swagger.version}</version>
-				</dependency>
-				<dependency>
-						<groupId>io.springfox</groupId>
-						<artifactId>springfox-swagger-ui</artifactId>
-						<version>${swagger.version}</version>
+						<groupId>com.hui.project</groupId>
+						<artifactId>hui-boot-common</artifactId>
+						<version>${hui-boot-common.version}</version>
 				</dependency>
 				<!--数据-->
 				<dependency>
@@ -63,11 +57,6 @@
 				<dependency>
 						<groupId>org.springframework.boot</groupId>
 						<artifactId>spring-boot-starter-amqp</artifactId>
-				</dependency>
-				<dependency>
-						<groupId>com.baomidou</groupId>
-						<artifactId>mybatis-plus-boot-starter</artifactId>
-						<version>${mybatisplus-boot-starter.version}</version>
 				</dependency>
 				<dependency>
 						<groupId>com.baomidou</groupId>
