--- a/hui-boot-common/pom.xml
+++ b/hui-boot-common/pom.xml
@@ -10,5 +10,17 @@
 		<modelVersion>4.0.0</modelVersion>
 
 		<artifactId>hui-boot-common</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+
+		<properties>
+		</properties>
+
+		<dependencies>
+				<dependency>
+						<groupId>com.baomidou</groupId>
+						<artifactId>mybatis-plus-boot-starter</artifactId>
+						<version>${mybatisplus-boot-starter.version}</version>
+				</dependency>
+		</dependencies>
 
 </project>
