--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
 
 		<properties>
 				<java.version>1.8</java.version>
+				<swagger.version>2.8.0</swagger.version>
+				<mybatisplus-boot-starter.version>3.1.0</mybatisplus-boot-starter.version>
 				<jsonwebtoken.version>0.9.1</jsonwebtoken.version>
 				<fastjson.version>1.2.47</fastjson.version>
 				<commons-lang3.version>3.8.1</commons-lang3.version>
@@ -33,6 +35,16 @@
 						<groupId>org.projectlombok</groupId>
 						<artifactId>lombok</artifactId>
 						<optional>true</optional>
+				</dependency>
+				<dependency>
+						<groupId>io.springfox</groupId>
+						<artifactId>springfox-swagger2</artifactId>
+						<version>${swagger.version}</version>
+				</dependency>
+				<dependency>
+						<groupId>io.springfox</groupId>
+						<artifactId>springfox-swagger-ui</artifactId>
+						<version>${swagger.version}</version>
 				</dependency>
 				<dependency>
 						<groupId>com.alibaba</groupId>
