--- a/hui-boot-common/pom.xml
+++ b/hui-boot-common/pom.xml
@@ -10,12 +10,27 @@
 		<modelVersion>4.0.0</modelVersion>
 
 		<artifactId>hui-boot-common</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
 
 		<properties>
 		</properties>
 
 		<dependencies>
+				<dependency>
+						<groupId>org.projectlombok</groupId>
+						<artifactId>lombok</artifactId>
+				</dependency>
+				<dependency>
+						<groupId>io.springfox</groupId>
+						<artifactId>springfox-swagger2</artifactId>
+				</dependency>
+				<dependency>
+						<groupId>com.alibaba</groupId>
+						<artifactId>fastjson</artifactId>
+				</dependency>
+				<dependency>
+						<groupId>org.apache.commons</groupId>
+						<artifactId>commons-lang3</artifactId>
+				</dependency>
 				<dependency>
 						<groupId>com.baomidou</groupId>
 						<artifactId>mybatis-plus-boot-starter</artifactId>
