--- a/hui-boot-api/pom.xml
+++ b/hui-boot-api/pom.xml
@@ -14,11 +14,14 @@
 		<description>Simple project for Spring Boot</description>
 
 		<properties>
-				<hui-boot-common.version>0.0.1-SNAPSHOT</hui-boot-common.version>
 				<velocity-engine-core.version>2.0</velocity-engine-core.version>
 		</properties>
 
 		<dependencies>
+				<dependency>
+						<groupId>com.hui.project</groupId>
+						<artifactId>hui-boot-common</artifactId>
+				</dependency>
 				<dependency>
 						<groupId>org.springframework.boot</groupId>
 						<artifactId>spring-boot-starter-web</artifactId>
@@ -35,9 +38,8 @@
 						<optional>true</optional>
 				</dependency>
 				<dependency>
-						<groupId>com.hui.project</groupId>
-						<artifactId>hui-boot-common</artifactId>
-						<version>${hui-boot-common.version}</version>
+						<groupId>io.springfox</groupId>
+						<artifactId>springfox-swagger-ui</artifactId>
 				</dependency>
 				<!--数据-->
 				<dependency>
