--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,20 @@
 				<modelmapper.version>2.3.1</modelmapper.version>
 		</properties>
 
+		<dependencies>
+				<dependency>
+						<groupId>org.projectlombok</groupId>
+						<artifactId>lombok</artifactId>
+						<scope>provided</scope>
+				</dependency>
+				<dependency>
+						<groupId>org.apache.commons</groupId>
+						<artifactId>commons-lang3</artifactId>
+						<version>${commons-lang3.version}</version>
+						<scope>provided</scope>
+				</dependency>
+		</dependencies>
+
 		<dependencyManagement>
 				<dependencies>
 						<dependency>
@@ -58,11 +72,6 @@
 								<groupId>io.jsonwebtoken</groupId>
 								<artifactId>jjwt</artifactId>
 								<version>${jsonwebtoken.version}</version>
-						</dependency>
-						<dependency>
-								<groupId>org.apache.commons</groupId>
-								<artifactId>commons-lang3</artifactId>
-								<version>${commons-lang3.version}</version>
 						</dependency>
 						<dependency>
 								<groupId>org.csource</groupId>
