swagger-bootstrap-ui

--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,15 @@
 								<artifactId>springfox-swagger2</artifactId>
 								<version>${swagger.version}</version>
 						</dependency>
-						<dependency>
+						<!--<dependency>
 								<groupId>io.springfox</groupId>
 								<artifactId>springfox-swagger-ui</artifactId>
 								<version>${swagger.version}</version>
+						</dependency>-->
+						<dependency>
+								<groupId>com.github.xiaoymin</groupId>
+								<artifactId>swagger-bootstrap-ui</artifactId>
+								<version>1.9.6</version>
 						</dependency>
 						<dependency>
 								<groupId>com.alibaba</groupId>
