--- a/hui-boot-api/pom.xml
+++ b/hui-boot-api/pom.xml
@@ -38,8 +38,8 @@
 						<optional>true</optional>
 				</dependency>
 				<dependency>
-						<groupId>io.springfox</groupId>
-						<artifactId>springfox-swagger-ui</artifactId>
+						<groupId>com.github.xiaoymin</groupId>
+						<artifactId>swagger-bootstrap-ui</artifactId>
 				</dependency>
 				<!--数据-->
 				<dependency>
