--- a/hui-boot-api/pom.xml
+++ b/hui-boot-api/pom.xml
@@ -1,90 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-		<modelVersion>4.0.0</modelVersion>
-		<parent>
-				<groupId>com.hui.project</groupId>
-				<artifactId>hui-boot</artifactId>
-				<version>0.0.1-SNAPSHOT</version>
-		</parent>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.hui.project</groupId>
+        <artifactId>hui-boot</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
 
-		<artifactId>hui-boot-api</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-		<name>hui-boot-api</name>
-		<description>Simple project for Spring Boot</description>
+    <artifactId>hui-boot-api</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>hui-boot-api</name>
+    <description>Simple project for Spring Boot</description>
 
-		<properties>
-				<velocity-engine-core.version>2.0</velocity-engine-core.version>
-		</properties>
+    <properties>
+        <velocity-engine-core.version>2.3</velocity-engine-core.version>
+    </properties>
 
-		<dependencies>
-				<dependency>
-						<groupId>com.hui.project</groupId>
-						<artifactId>hui-boot-common</artifactId>
-				</dependency>
-				<dependency>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-starter-web</artifactId>
-				</dependency>
-				<dependency>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-starter-test</artifactId>
-						<scope>test</scope>
-				</dependency>
-				<dependency>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-devtools</artifactId>
-						<scope>runtime</scope>
-						<optional>true</optional>
-				</dependency>
-				<dependency>
-						<groupId>com.github.xiaoymin</groupId>
-						<artifactId>swagger-bootstrap-ui</artifactId>
-				</dependency>
-				<!--数据-->
-				<dependency>
-						<groupId>mysql</groupId>
-						<artifactId>mysql-connector-java</artifactId>
-						<scope>runtime</scope>
-				</dependency>
-				<dependency>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-starter-data-redis</artifactId>
-				</dependency>
-				<!--				加载spring-session-data-redis必须开启Redis-->
-				<!--				<dependency>-->
-				<!--						<groupId>org.springframework.session</groupId>-->
-				<!--						<artifactId>spring-session-data-redis</artifactId>-->
-				<!--				</dependency>-->
-				<dependency>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-starter-amqp</artifactId>
-				</dependency>
-				<dependency>
-						<groupId>com.baomidou</groupId>
-						<artifactId>mybatis-plus-generator</artifactId>
-						<version>${mybatisplus-boot-starter.version}</version>
-				</dependency>
-				<dependency>
-						<groupId>org.apache.velocity</groupId>
-						<artifactId>velocity-engine-core</artifactId>
-						<version>${velocity-engine-core.version}</version>
-						<scope>test</scope>
-				</dependency>
-				<!--数据 end-->
-		</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>com.hui.project</groupId>
+            <artifactId>hui-boot-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+        </dependency>
+        <!--数据-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!--				加载spring-session-data-redis必须开启Redis-->
+        <!--				<dependency>-->
+        <!--						<groupId>org.springframework.session</groupId>-->
+        <!--						<artifactId>spring-session-data-redis</artifactId>-->
+        <!--				</dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>${mybatisplus-boot-starter.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-engine-core</artifactId>
+            <version>${velocity-engine-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!--数据 end-->
+    </dependencies>
 
-		<build>
-				<plugins>
-						<plugin>
-								<groupId>org.springframework.boot</groupId>
-								<artifactId>spring-boot-maven-plugin</artifactId>
-						</plugin>
-						<plugin>
-								<groupId>org.apache.maven.plugins</groupId>
-								<artifactId>maven-assembly-plugin</artifactId>
-						</plugin>
-				</plugins>
-		</build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
