--- a/pom.xml
+++ b/pom.xml
@@ -1,94 +1,97 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-		<modelVersion>4.0.0</modelVersion>
-		<parent>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-parent</artifactId>
-				<version>2.1.3.RELEASE</version>
-				<relativePath /> <!-- lookup parent from service -->
-		</parent>
-		<groupId>com.hui.project</groupId>
-		<artifactId>hui-boot</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-		<name>hui-boot</name>
-		<description>Simple Boot project for Spring Boot</description>
-		<packaging>pom</packaging>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.6.RELEASE</version>
+        <relativePath /> <!-- lookup parent from service -->
+    </parent>
 
-		<modules>
-				<module>hui-boot-common</module>
-				<module>hui-boot-api</module>
-		</modules>
+    <groupId>com.hui.project</groupId>
+    <artifactId>hui-boot</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>hui-boot</name>
+    <description>Simple Boot project for Spring Boot</description>
+    <packaging>pom</packaging>
 
-		<properties>
-				<java.version>1.8</java.version>
-				<hui-boot-common.version>0.0.1-SNAPSHOT</hui-boot-common.version>
-				<swagger.version>2.9.2</swagger.version>
-				<mybatisplus-boot-starter.version>3.3.0</mybatisplus-boot-starter.version>
-				<jsonwebtoken.version>0.9.1</jsonwebtoken.version>
-				<fastjson.version>1.2.47</fastjson.version>
-				<fastdfs-client-java.version>1.27-RELEASE</fastdfs-client-java.version>
-				<commons-lang3.version>3.8.1</commons-lang3.version>
-				<modelmapper.version>2.3.1</modelmapper.version>
-		</properties>
+    <modules>
+        <module>hui-boot-common</module>
+        <module>hui-boot-api</module>
+    </modules>
 
-		<dependencies>
-				<dependency>
-						<groupId>org.projectlombok</groupId>
-						<artifactId>lombok</artifactId>
-						<scope>provided</scope>
-				</dependency>
-				<dependency>
-						<groupId>org.apache.commons</groupId>
-						<artifactId>commons-lang3</artifactId>
-						<version>${commons-lang3.version}</version>
-						<scope>provided</scope>
-				</dependency>
-		</dependencies>
+    <properties>
+        <java.version>1.8</java.version>
+        <hui-boot-common.version>0.0.1-SNAPSHOT</hui-boot-common.version>
+        <swagger.version>2.9.2</swagger.version>
+        <mybatisplus-boot-starter.version>3.0.3</mybatisplus-boot-starter.version>
+        <jsonwebtoken.version>0.9.1</jsonwebtoken.version>
+        <fastjson.version>1.2.47</fastjson.version>
+        <fastdfs-client-java.version>1.27-RELEASE</fastdfs-client-java.version>
+        <commons-lang3.version>3.8.1</commons-lang3.version>
+        <modelmapper.version>2.3.1</modelmapper.version>
+        <hutool.version>5.7.22</hutool.version>
+        <pagehelper.version>1.2.8</pagehelper.version>
+    </properties>
 
-		<dependencyManagement>
-				<dependencies>
-						<dependency>
-								<groupId>com.hui.project</groupId>
-								<artifactId>hui-boot-common</artifactId>
-								<version>${hui-boot-common.version}</version>
-						</dependency>
-						<dependency>
-								<groupId>io.springfox</groupId>
-								<artifactId>springfox-swagger2</artifactId>
-								<version>${swagger.version}</version>
-						</dependency>
-						<!--<dependency>
-								<groupId>io.springfox</groupId>
-								<artifactId>springfox-swagger-ui</artifactId>
-								<version>${swagger.version}</version>
-						</dependency>-->
-						<dependency>
-								<groupId>com.github.xiaoymin</groupId>
-								<artifactId>swagger-bootstrap-ui</artifactId>
-								<version>1.9.6</version>
-						</dependency>
-						<dependency>
-								<groupId>com.alibaba</groupId>
-								<artifactId>fastjson</artifactId>
-								<version>${fastjson.version}</version>
-						</dependency>
-						<dependency>
-								<groupId>io.jsonwebtoken</groupId>
-								<artifactId>jjwt</artifactId>
-								<version>${jsonwebtoken.version}</version>
-						</dependency>
-						<dependency>
-								<groupId>org.csource</groupId>
-								<artifactId>fastdfs-client-java</artifactId>
-								<version>${fastdfs-client-java.version}</version>
-						</dependency>
-						<dependency>
-								<groupId>org.modelmapper</groupId>
-								<artifactId>modelmapper</artifactId>
-								<version>${modelmapper.version}</version>
-						</dependency>
-				</dependencies>
-		</dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.hui.project</groupId>
+                <artifactId>hui-boot-common</artifactId>
+                <version>${hui-boot-common.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
+            <!--<dependency>
+                    <groupId>io.springfox</groupId>
+                    <artifactId>springfox-swagger-ui</artifactId>
+                    <version>${swagger.version}</version>
+            </dependency>-->
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>swagger-bootstrap-ui</artifactId>
+                <version>1.9.6</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${jsonwebtoken.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.csource</groupId>
+                <artifactId>fastdfs-client-java</artifactId>
+                <version>${fastdfs-client-java.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.modelmapper</groupId>
+                <artifactId>modelmapper</artifactId>
+                <version>${modelmapper.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
